Fixed z-index of drawer

--- a/src/components/Drawer/drawer.scss
+++ b/src/components/Drawer/drawer.scss
@@ -1,4 +1,8 @@
 /*Main drawer Design */
+
+#drawerWrapper{
+  z-index: 999;
+}
 .drawer-left {
   height: 100%;
   top: 0;
